# hs-ats

./: .atsfmt.toml  .ctags  .ghci  .gitattributes  .gitignore  .hlint.yaml  .travis.yml  .weeder.yaml  .yamllint  Justfile  README.md  Setup.hs  TODO.md  appveyor.yml  atspkg.dhall  cabal.project  cabal.project.local  fast-arithmetic.cabal  fast-combinatorics.cabal  hie.yaml  shake.hs  stack.yaml
app/: Main.hs
fast-arithmetic/: .ctags  .ghci  CHANGELOG.md  LICENSE  README.md  Setup.hs  TODO.md  atspkg.dhall  bench.dhall  fast-arithmetic.cabal  hie.yaml  lib.dhall  pkg.dhall  source.dhall
fast-arithmetic/.atspkg/contrib/ats-includes-0.3.10/: configure
fast-arithmetic/.atspkg/contrib/ats-includes-0.3.10/prelude/CATS/: array.cats  arrayptr.cats  arrayref.cats  basics.cats  bool.cats  char.cats  filebas.cats  float.cats  fprintf.cats  integer.cats  integer_fixed.cats  integer_long.cats  integer_ptr.cats  integer_short.cats  integer_size.cats  list.cats  matrix.cats  matrixptr.cats  memory.cats  option.cats  pointer.cats  string.cats  strptr.cats
fast-arithmetic/.atspkg/contrib/ats-includes-0.3.10/prelude/DATS/: arith_prf.dats  array.dats  array_prf.dats  arrayptr.dats  arrayref.dats  basics.dats  bool.dats  char.dats  checkast.dats  filebas.dats  filebas_prf.dats  float.dats  gnumber.dats  gorder.dats  gprint.dats  grandom.dats  integer.dats  integer_fixed.dats  integer_long.dats  integer_ptr.dats  integer_short.dats  integer_size.dats  intrange.dats  list.dats  list_vt.dats  matrix.dats  matrixptr.dats  matrixref.dats  memory.dats  option.dats  option_vt.dats  parray.dats  pointer.dats  reference.dats  stream.dats  stream_vt.dats  string.dats  strptr.dats  tostring.dats  tuple.dats  (+1 more)
fast-arithmetic/.atspkg/contrib/ats-includes-0.3.10/prelude/DATS/SHARE/: array_bsearch.dats  array_quicksort.dats  gnumber_float.dats  gnumber_int.dats  gnumber_uint.dats  gorder_bool.dats  gorder_char.dats  gorder_float.dats  gorder_int.dats  gorder_string.dats  gorder_uint.dats  list_vt_mergesort.dats  list_vt_quicksort.dats
fast-arithmetic/.atspkg/contrib/ats-includes-0.3.10/prelude/SATS/: arith_prf.sats  array.sats  array_prf.sats  arrayptr.sats  arrayref.sats  bool.sats  char.sats  checkast.sats  extern.sats  filebas.sats  float.sats  gnumber.sats  gorder.sats  gprint.sats  grandom.sats  integer.sats  integer_fixed.sats  integer_long.sats  integer_ptr.sats  integer_short.sats  integer_size.sats  intrange.sats  list.sats  list_vt.sats  matrix.sats  matrixptr.sats  matrixref.sats  memory.sats  option.sats  option_vt.sats  parray.sats  pointer.sats  reference.sats  stream.sats  stream_vt.sats  string.sats  strptr.sats  tostring.sats  tuple.sats  unsafe.sats
fast-arithmetic/.atspkg/contrib/ats-includes-0.3.10/src/CBOOT/: pats_basics_dats.c  pats_basics_sats.c  pats_ccomp_caseof_dats.c  pats_ccomp_ccompenv_dats.c  pats_ccomp_claulst_dats.c  pats_ccomp_d2env_dats.c  pats_ccomp_dats.c  pats_ccomp_decl_dats.c  pats_ccomp_dynexp_dats.c  pats_ccomp_emit2_dats.c  pats_ccomp_emit3_dats.c  pats_ccomp_emit_dats.c  pats_ccomp_environ_dats.c  pats_ccomp_funent_dats.c  pats_ccomp_funlab_dats.c  pats_ccomp_hipat_dats.c  pats_ccomp_hitype_dats.c  pats_ccomp_instrseq_dats.c  pats_ccomp_lazyeval_dats.c  pats_ccomp_looping_dats.c  pats_ccomp_main_dats.c  pats_ccomp_print_dats.c  pats_ccomp_sats.c  pats_ccomp_subst_dats.c  pats_ccomp_template_dats.c  pats_ccomp_tmplab_dats.c  pats_ccomp_tmpvar_dats.c  pats_ccomp_trywith_dats.c  pats_ccomp_util_dats.c  pats_codegen2_absrec_dats.c  pats_codegen2_dats.c  pats_codegen2_datype_dats.c  pats_codegen2_fprint_dats.c  pats_codegen2_sats.c  pats_codegen2_util_dats.c  pats_comarg_dats.c  pats_comarg_sats.c  pats_constraint3_dats.c  pats_constraint3_icnstr_dats.c  pats_constraint3_init_dats.c  (+200 more)
fast-arithmetic/.atspkg/contrib/ats-includes-0.3.10/src/CBOOT/libats/: DATS_funmap_avltree_dats.c  DATS_funmset_listord_dats.c  DATS_funset_avltree_dats.c  DATS_funset_listord_dats.c  DATS_hashtable_chain_dats.c  DATS_hashtable_linprb_dats.c  DATS_linqueue_arr_dats.c  DATS_linqueue_lst_dats.c  SATS_funmap_avltree_sats.c  SATS_funmset_listord_sats.c  SATS_funset_avltree_sats.c  SATS_funset_listord_sats.c  SATS_hashtable_chain_sats.c  SATS_hashtable_linprb_sats.c  SATS_linqueue_arr_sats.c  SATS_linqueue_lst_sats.c  ngc_DATS_deque_arr_dats.c  ngc_SATS_deque_arr_sats.c
fast-arithmetic/.atspkg/contrib/ats-includes-0.3.10/src/CBOOT/libc/: DATS_fcntl_dats.c  DATS_gmp_dats.c  DATS_unistd_dats.c  SATS_errno_sats.c  SATS_fcntl_sats.c  SATS_gmp_sats.c  SATS_stdarg_sats.c  SATS_stdio_sats.c  SATS_stdlib_sats.c  SATS_string_sats.c  SATS_time_sats.c  SATS_unistd_sats.c  sys_SATS_stat_sats.c  sys_SATS_types_sats.c  sys_SATS_wait_sats.c
fast-arithmetic/.atspkg/contrib/ats-includes-0.3.10/src/CBOOT/prelude/: DATS_array0_dats.c  DATS_array_dats.c  DATS_basics_dats.c  DATS_bool_dats.c  DATS_char_dats.c  DATS_filebas_dats.c  DATS_float_dats.c  DATS_integer_dats.c  DATS_lazy_dats.c  DATS_lazy_vt_dats.c  DATS_list0_dats.c  DATS_list_dats.c  DATS_list_vt_dats.c  DATS_matrix0_dats.c  DATS_matrix_dats.c  DATS_option0_dats.c  DATS_option_dats.c  DATS_option_vt_dats.c  DATS_pointer_dats.c  DATS_printf_dats.c  DATS_ptrarr_dats.c  DATS_reference_dats.c  DATS_sizetype_dats.c  DATS_string_dats.c  DATS_unsafe_dats.c  ats_main_prelude_dats.c  basics_dyn_sats.c  basics_sta_sats.c
fast-arithmetic/.atspkg/contrib/atscntrb-hx-intinf/TEST/: test04
fast-arithmetic/ats-src/: bench.dats  combinatorics-internal.dats  combinatorics.dats  combinatorics.sats  number-theory-internal.dats  number-theory.dats  number-theory.sats  numerics-internal.dats  numerics.dats  numerics.sats
fast-arithmetic/bench/: Bench.hs
fast-arithmetic/cbits/: combinatorics.c  number-theory.c  numerics.c
fast-arithmetic/common/Numeric/: Haskell.hs
fast-arithmetic/include/: fast_arithmetic.h
fast-arithmetic/src/Numeric/: Combinatorics.hs  Common.hs  Integer.hs  NumberTheory.hs  Pure.hs
fast-arithmetic/test/: Spec.hs
gmpint/: CHANGELOG.md  README.md  TODO.md  gmpint.cabal
gmpint/src/Control/: Recursion.hs
gmpint/src/Data/: GMP.hs
(+22 files in other folders)
