name:                fast-combinatorics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com//fast-combinatorics#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2017 Vanessa McHale
--category:            Web
build-type:          Simple
extra-source-files:  cbits/fast-combinatorics.c
extra-doc-files:     README.md
cabal-version:       >=1.18

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

library
  c-sources:           cbits/fast-combinatorics.c
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  if flag(development)
    ghc-options:       -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

test-suite fast-combinatorics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fast-combinatorics
                     , hspec
                     , combinatorics
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
  default-language:    Haskell2010

benchmark fast-combinatorics-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , fast-combinatorics
                     , criterion
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -optc-mtune=native -optc-flto
  default-language:    Haskell2010

executable fast-combinatorics
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fast-combinatorics
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

source-repository head
  type:     git
  location: https://github.com//fast-combinatorics
